[#6465] Fundraising banner, fix close button z-index

--- a/media/css/mozorg/home/fundraiser2018.scss
+++ b/media/css/mozorg/home/fundraiser2018.scss
@@ -112,6 +112,7 @@ $image-path: '/media/protocol/img';
     position: absolute;
     top: $spacing-sm;
     width: 42px;
+    z-index: 10;
 
     &:hover,
     &:focus {
